--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 # action.yml
-name: 'mabg'
+name: 'thiago-scherrer/mabg'
 description: 'Marlin auto build generation with github action'
 runs:
   using: 'docker'
