--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,8 @@ name: Test
 on: [push]
 
 jobs:
-  test:
+  build:
+    runs-on: [ubuntu-latest]
     steps:
       -
         name: Checkout project
