--- a/.github/workflows/security_scan.yml
+++ b/.github/workflows/security_scan.yml
@@ -1,6 +1,9 @@
 name: Security check
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build-and-test:
@@ -15,3 +18,16 @@ jobs:
           docker run --rm -t \
             -v $(pwd):/home/repo coinbase/salus \
             --config "file://salus-config.yml"
+
+  sonarcloud:
+    name: SonarCloud
+    runs-on: [ubuntu-latest]
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
